--- a/rpi_music_collector/templates/wifi_config.html
+++ b/rpi_music_collector/templates/wifi_config.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">MusicCollector by @rishabhc9</a>
@@ -18,7 +17,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/wifi">WiFi Settings</a>
+                        <a class="nav-link active" href="/wifi">WiFi Settings</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/listening_stats">Listening Trends</a>
                     </li>
                 </ul>
             </div>
@@ -26,17 +28,17 @@
     </nav>
 
     <div class="container mt-4">
-        <h1 class="mb-4">WiFi Settings</h1>
-        <form method="POST" class="card p-4">
+        <h1 class="mb-4" style="color: #402E7A;">WiFi Settings</h1>
+        <form method="POST" class="card p-4" style="border: 1px solid #402E7A;">
             <div class="mb-3">
-                <label for="ssid" class="form-label">SSID</label>
-                <input type="text" class="form-control" id="ssid" name="ssid" required>
+                <label for="ssid" class="form-label" style="color: #402E7A;">SSID</label>
+                <input type="text" class="form-control" id="ssid" name="ssid" required style="border: 1px solid #402E7A;">
             </div>
             <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password" required>
+                <label for="password" class="form-label" style="color: #402E7A;">Password</label>
+                <input type="password" class="form-control" id="password" name="password" required style="border: 1px solid #402E7A;">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" style="background-color: #402E7A; border: 1px solid black;">Submit</button>
         </form>
     </div>
 
